# winbridge

./: .gitignore  Cargo.toml  INSTALL.ko.md  INSTALL.md  LICENSE  README.ko.md  README.md  install.md  install.sh  start-session.sh  uninstall.sh
config/: autounattend.xml.template  firstboot.ps1  libvirt-vm.xml.template
dists/stable/: Release
dists/stable/main/binary-amd64/: Packages
docs/: resume-p2a.md
docs/environments/: ubuntu-22.04-nvidia-amd.md
scripts/host/: 00-check-prerequisites.sh  01-download-iso.sh  02-setup-libvirt.sh  03-create-vm.sh  04-wait-for-install.sh  05-verify-guest.sh  06-setup-file-share.sh  07-enable-qemu-ga.sh  08-install-linux-app.sh
scripts/lib/: common.sh
scripts/release/: build-apt-repo.sh  build-deb.sh  publish-apt-repo-gh-pages.sh  publish-github-release.sh
scripts/vm/: 00-check-prerequisites.sh  01-download-artifacts.sh  lib.sh
scripts/vm/tests/: test-00.sh  test-01.sh  test-lib.sh
scripts/windows/: diagnose-winbridge.ps1  install-url-forwarder.ps1  install-vdd.ps1  position-kakaotalk.ps1  repair-wallpaper.ps1  verify-displays.ps1
src/: cli.rs  clipboard.rs  config.rs  desktop.rs  doctor.rs  error.rs  lib.rs  main.rs  rdp.rs  tray.rs
src/vm/: backend.rs  libvirt_backend.rs  mod.rs
tests/: cli.rs  rdp_integration.rs  vm_integration.rs
tests/e2e/: install-uninstall-cycle.sh
tests/unit/: test-apt-repo.sh  test-common.sh  test-deb-package.sh  test-download.sh  test-file-share.sh  test-firstboot.sh  test-libvirt.sh  test-linux-app-install.sh  test-prerequisites.sh
